# 02226_NES

./: .cproject  .gitignore  .mxproject  .project  02226_Firmware.ioc  CMakeLists.txt  Makefile  README.md  add_ts.sh  capture_uart.sh  compile_commands.json
Core/Inc/: bme680_defs.h  main.h
Core/Src/: gpio.c  i2c.c  main.c  usart.c
Drivers/SubGhz/: radio_driver.c
PythonScripts/: README.md  averages.py  openSF10.py  openSF7.py  packetLoss.py  pyproject.toml  woodSF10.py  woodSF7.py
PythonScripts/Dataset_final/: open_sf10_1000m.csv  open_sf10_250m.csv  open_sf10_500m.csv  open_sf7_1000m.csv  open_sf7_250m.csv  open_sf7_500m.csv  wood_sf10_1000m.csv  wood_sf10_250m.csv  wood_sf10_500m.csv  wood_sf7_250m.csv  wood_sf7_500m.csv
