[tool.poetry]
name = "projectNES"
version = "0.1.0"
description = ""
authors = ["santiago <108626122+marcosantiagomuro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
spline = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
